@@ -1,3 +1,4 @@
+* Dialer (ECCP): extend "getcampaigninfo" request to report external URLs
 * External URL: new module for management of external URLs to be opened on each
   connected call.
 * Agent Console: when reading ECCP password for agent, only active agents should
